[gd_scene load_steps=9 format=3 uid="uid://d3e40ubib40n3"]

[ext_resource type="Script" path="res://scripts/death_screen.gd" id="1_oqcpe"]
[ext_resource type="FontFile" uid="uid://bhgqu765qudb4" path="res://assets/SpaceMono-Regular.ttf" id="2_0kghx"]
[ext_resource type="AudioStream" uid="uid://dgypv1jgsm1lc" path="res://assets/sfx/Menu click.mp3" id="3_0knxw"]
[ext_resource type="AudioStream" uid="uid://b8n4u1leburqa" path="res://assets/sfx/Game over.mp3" id="4_wof63"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pcnn7"]
bg_color = Color(0.631373, 0.105882, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cq0ud"]
bg_color = Color(0.505882, 0.0784314, 0.14902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fdtyj"]
bg_color = Color(0.631373, 0.105882, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x773c"]
bg_color = Color(0.505882, 0.0784314, 0.14902, 1)

[node name="DeathScreen" type="CanvasLayer"]
process_mode = 3

[node name="DeathScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_oqcpe")

[node name="ColorRect" type="ColorRect" parent="DeathScreen"]
z_index = -1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.0941176, 0.0784314, 0.145098, 0.901961)

[node name="Label" type="Label" parent="DeathScreen"]
layout_mode = 0
offset_left = 488.0
offset_top = 144.0
offset_right = 794.0
offset_bottom = 219.0
theme_override_fonts/font = ExtResource("2_0kghx")
theme_override_font_sizes/font_size = 50
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="DeathScreen"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="DeathScreen"]
layout_mode = 0
offset_left = 456.0
offset_top = 328.0
offset_right = 824.0
offset_bottom = 454.0
theme_override_constants/separation = 50

[node name="Retry" type="Button" parent="DeathScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_0kghx")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_pcnn7")
theme_override_styles/normal = SubResource("StyleBoxFlat_cq0ud")
text = "Retry"

[node name="Main Menu" type="Button" parent="DeathScreen/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_0kghx")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_fdtyj")
theme_override_styles/normal = SubResource("StyleBoxFlat_x773c")
text = "Main Menu"

[node name="sfx_click" type="AudioStreamPlayer" parent="DeathScreen"]
stream = ExtResource("3_0knxw")

[node name="sfx_GameOver" type="AudioStreamPlayer" parent="DeathScreen"]
stream = ExtResource("4_wof63")

[connection signal="pressed" from="DeathScreen/VBoxContainer/Retry" to="DeathScreen" method="_on_retry_pressed"]
[connection signal="pressed" from="DeathScreen/VBoxContainer/Main Menu" to="DeathScreen" method="_on_main_menu_pressed"]
